_sass/jekyll-theme-prologue.scss
/* ... */
	#nav {
		ul {
			list-style: none;
			margin-bottom: 0;
			hr {
				margin: auto 1.5em;
			}

			li {
				a {
					display: block;
					padding: 0.2em 1.5em 0.2em 1.5em;
					color: rgba(255, 255, 255, 0.5);
					text-decoration: none;
					outline: 0;
					border: 0;
					@include vendor('transition', 'none');

					span {
						position: relative;
						display: block;
						font-size: 0.8em;

						&::before {
							position: absolute;
							left: 0;
							color: #41484c;
							text-align: center;
							width: 1.25em;
							line-height: 1.75em;
						}
					}

					&.active {
						background: rgba(0, 0, 0, 0.15);
						box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
						color: #fff;

						span::before {
							color: #3f1e8a;
						}
					}
				}
			}
		}
	}

/* Footer */

	#footer {
		margin-left: 375px;
		text-align: center;
		color: #000;
		background-color: #e5c5fc;
		padding: 1em 0 1em 0;
		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
		font-size: 0.8em;

		.copyright {
			cursor: default;
			margin: 0;

			li {
				display: inline-block;
				line-height: 1em;
				border-left: solid 1px rgba(128, 128, 128, 0.35);
				padding: 0 0 0 0.5em;
				margin: 0 0 0 0.5em;

				&:first-child {
					border-left: 0;
					padding-left: 0;
					margin-left: 0;
				}
			}
		}
	}

/* Main */

	#main {
		margin-left: 375px;
		> section {
			text-align: center;
		}
		> article {
			text-align: left;
			header {
				p {
					font-style: italic;
				}
			}
		}
		
		
		
		> section, article {
			margin: 0;
			overflow: hidden;
			padding: 4em 0;
			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
			background-image: url('images/overlay.png');

			&.dark {
				color: #ddd;
				color: rgba(255, 255, 255, 0.75);

				h2, h3, h4, h5, h6 {
					color: inherit;
				}

				strong {
					color: #fff;
					border-color: inherit;
				}

				a {
					color: #fff;
					border-color: inherit;

					&:hover {
						border-bottom-color: rgba(255, 255, 255, 0);
					}
				}
			}

			&.cover {
				padding: 6em 0;
				position: relative;
				z-index: 0;
				img.back {
					position: absolute;
					object-fit: cover;
					width: 100%;
					height: 100%;
					left: 0;
					top: 0;
					z-index: -1;
				}
			}

			&.shade-one {
				background-color: #FFFFFF;
			}

			&.shade-two {
				background-color: #FFFFFF;
			}

			&.shade-three {
				background-color: #FFFFFF;
			}

			&.shade-four {
				background-color: #FFFFFF;
			}
		}
	}

/* Wide */

	@include breakpoint(wide) {

		/* homepage_header */
		
			div.vidoverlay {
				position:absolute;
				display: table-cell;
				text-align:center;
				vertical-align:middle;
				width:100%;
				height:65%;
				top:35%;
				z-index:1;
				font-family: 'Source Sans Pro', sans-serif;;
				font-size: 4em;
				font-weight: bold;
				color: black;
				-webkit-text-stroke-width: 0.5px;
				-webkit-text-stroke-color: white;
			}
			p.vidsub {
				font-family: 'Source Sans Pro', sans-serif;;
				font-size: 0.5em;
				font-weight: bold;
				color: white;
				line-height: 125%;
				-webkit-text-stroke-color: #3f1e8a;
				-webkit-text-stroke-width: 0.1px;
			}


		/* Basic */

			body, input, textarea, select {
				font-size: 17pt;
			}

		/* Header */

			#header {
				width: 300px;
			}

		/* Footer */

			#footer {
				margin-left: 300px;
			}

		/* Main */

			#main {
				margin-left: 300px;
			}

	}

/* Normal */

	@include breakpoint(normal) {

			div.vidoverlay {
				position:absolute;
				display: table-cell;
				text-align:center;
				vertical-align:middle;
				width:100%;
				height:65%;
				top:35%;
				z-index:1;
				font-family: 'Source Sans Pro', sans-serif;;
				font-size: 4em;
				font-weight: bold;
				color: black;
				-webkit-text-stroke-width: 0.5px;
				-webkit-text-stroke-color: white;
			}
			p.vidsub {
				font-family: 'Source Sans Pro', sans-serif;;
				font-size: 0.5em;
				font-weight: bold;
				color: white;
				line-height: 125%;
				-webkit-text-stroke-color: #3f1e8a;
				-webkit-text-stroke-width: 0.1px;
			}
			
		/* Main */

			#main {
				> section, article {
					padding: 3em 0;
				}

				section {
					&.cover {
						padding: 5em 0;
					}
				}
			}

		/* Header */
			#nav {
				ul {
					hr {
						margin: auto 1.25em;
					}
				}
			}
	}

/* Narrow */

	@include breakpoint(narrow) {

			div.vidoverlay {
				position:absolute;
				display: table-cell;
				text-align:center;
				vertical-align:middle;
				width:100%;
				height:65%;
				top:35%;
				z-index:1;
				font-family: 'Source Sans Pro', sans-serif;;
				font-size: 4em;
				font-weight: bold;
				color: black;
				-webkit-text-stroke-width: 0.5px;
				-webkit-text-stroke-color: white;
			}
			p.vidsub {
				font-family: 'Source Sans Pro', sans-serif;;
				font-size: 0.25em;
				font-weight: bold;
				color: white;
				line-height: 125%;
				-webkit-text-stroke-color: #3f1e8a;
				-webkit-text-stroke-width: 0.1px;
			}
			

		/* Basic */

			body, input, textarea, select {
				font-size: 12pt;
			}

			.container {
				padding: 0 2em 0 2em;
			}

		/* List */

			ul {
				&.icons {
					li {
						a {
							width: 1.75em;
						}
					}
				}
			}

		/* Item */

			.item {
				margin-bottom: 20px;
			}

		/* Header */

			#header {
				width: 20%;
			}

			#logo {
				.image {
					position: relative;
					margin: 0 0 0.5em 0;
				}
			}

			#nav {
				ul {
					list-style: none;
					li {
						a {
							font-size: 0.9em;
							padding-top: 0.2em;
							padding-bottom: 0.2em;

							span {
								padding-right: 2.25em;

								&::before {
									left: 100%;
									margin-left: -1.25em;
									line-height: 2.25em;
								}
							}
						}
					}
				}
			}

		/* Footer */

			#footer {
				margin-left: 20%;
			}

		/* Main */

			#main {
				margin-left: 20%;
			}

	}

/* Narrower */

	#headerToggle {
		display: none;
	}
/* ... */

